[package]
name = "fuse_mt"
version = "0.6.0-dev"
authors = ["William R. Fraser <wfraser@codewise.org>"]
repository = "https://github.com/wfraser/fuse-mt"
description = "A higher-level FUSE filesystem library with multi-threading and inode->path translation."
categories = ["filesystem"]
keywords = ["fuse", "filesystem"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.13"
time = "0.2.24"
tracing = "0.1.22"
fuser = {path="../fuser", version="0.7.0" , features=[ "abi-7-31", "libfuse" ] }
libc = "0.2.82"
threadpool = "1.8.1"

[workspace]
members = [".", "example"]
