[package]
name = "passthrufs"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]

[dependencies]
#fuse = "0.2"
libc = "0.2"
log = "0.3"
time = "0.1"
fuse_mt = { path = ".." }

[dependencies.fuse]
#git = "https://github.com/wfraser/rust-fuse"
#branch = "xattrs"
git = "https://github.com/zargony/rust-fuse"
rev = "4283cd10b461ebadbdfe04d4335529f508c3435d"
